<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:id="@+id/root"
    tools:context="menezes.paulo.safe.LoginActivity" >

	<ImageView
	    android:contentDescription="@string/app_name"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dp"
	    android:layout_gravity="center_horizontal"
	    android:background="@drawable/logo" />
	
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="70dp"
	    android:textSize="@dimen/text_14"
	    android:textColor="#FFFFFF"
	    android:text="@string/aboutText1"
	    android:gravity="center"/>
	
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:textSize="@dimen/text_14"
	    android:textColor="#FFFFFF"
	    android:text="@string/aboutText2"
	    android:gravity="center"/>
	
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:textSize="@dimen/text_14"
	    android:textColor="#FFFFFF"
	    android:text="@string/aboutText3"
	    android:gravity="center"/>
	
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:textSize="@dimen/text_10"
	    android:textColor="#FFFFFF"
	    android:text="@string/aboutText4"
	    android:gravity="center"/>
	
</LinearLayout>
