<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/dialog_background">
   
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:stretchColumns="*">
        <TableRow>
         	<EditText 
		        android:id="@+id/textFirstName"
		        android:inputType="textPersonName"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
			    android:layout_marginEnd="10dp"
		        android:hint="@string/firstNameHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:background="@drawable/edit_text"/>
		    
		    <EditText 
		        android:id="@+id/textLastName"
		        android:inputType="textPersonName"
		        android:layout_width="0dip"
		        android:layout_height="wrap_content"
		        android:hint="@string/lastNameHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:background="@drawable/edit_text"/>
        </TableRow>
    </TableLayout>
    
    <EditText 
        android:id="@+id/textEmail"
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="0dp"
	    android:layout_marginBottom="10dp"
        android:hint="@string/emailHint"
        android:textSize="@dimen/edit_text_text_size"
        android:textColor="@color/edit_text"
        android:background="@drawable/edit_text"/>
    
    <EditText 
        android:id="@+id/textPassword"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
        android:hint="@string/passwordHint"
        android:textSize="@dimen/edit_text_text_size"
        android:textColor="@color/edit_text"
        android:background="@drawable/edit_text"/>
    
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/line"/>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="end">
	    
		<menezes.dd.processbutton.FlatButton
		    android:id="@+id/enterButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:text="@string/registerButton"
		    android:textColor="@color/white_color"
		    android:textSize="14sp"
		    custom:pb_colorNormal="@color/blue"
		    custom:pb_colorPressed="@color/blue_hover" />
		
	</LinearLayout>
        
</LinearLayout>
