<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/changePhoto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/name"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName" >
                </EditText>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/biografy"
            android:labelFor="@+id/biografy" />

        <EditText
            android:id="@+id/biografy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/phone"
            android:text="@string/phone" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gender"
            android:labelFor="@+id/gender" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="none"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true" />

        <menezes.dd.processbutton.FlatButton
		    android:id="@+id/saveChanges"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:text="@string/saveChanges"
		    android:textColor="@color/white_color"
		    android:textSize="14sp"
		    custom:pb_colorNormal="@color/blue"
		    custom:pb_colorPressed="@color/blue_hover" />
    </LinearLayout>
</ScrollView>