<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/dialog_background">
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Spinner
			    android:id="@+id/category"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="10dp"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" />
		    
		    <EditText 
		        android:id="@+id/name"
		        android:inputType="text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
		        android:hint="@string/namePlaceHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:background="@drawable/edit_text"/>
		    
		    <EditText 
		        android:id="@+id/city"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
		        android:hint="@string/cityHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:gravity="top"
		        android:background="@drawable/edit_text"/>
		    
		    <EditText 
		        android:id="@+id/address"
		        android:inputType="textMultiLine"
		        android:layout_width="fill_parent"
		        android:layout_height="60dp"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
		        android:hint="@string/addressHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:gravity="top"
		        android:background="@drawable/edit_text"/>
		    
		    <EditText 
		        android:id="@+id/phone"
		        android:inputType="phone"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
		        android:hint="@string/phoneHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:gravity="top"
		        android:background="@drawable/edit_text"/>
        </LinearLayout>
    </ScrollView>
	    
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/line"/>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="end">
	    
		<menezes.dd.processbutton.FlatButton
		    android:id="@+id/addPlaceButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:text="@string/addPlace"
		    android:textColor="@color/white_color"
		    android:textSize="14sp"
		    custom:pb_colorNormal="@color/blue"
		    custom:pb_colorPressed="@color/blue_hover" />
		
	</LinearLayout>
    

</LinearLayout>
