<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/dialog_background">
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Spinner
			    android:id="@+id/type"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="10dp"
			    android:layout_marginBottom="10dp"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content" />
		    
		    <EditText 
		        android:id="@+id/title"
		        android:inputType="textCapSentences|textAutoCorrect"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
		        android:hint="@string/titleHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:background="@drawable/edit_text"/>
		    
		    <Button  
		        android:id="@+id/place"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginTop="0dp"
			    android:layout_marginBottom="10dp"
		        android:hint="@string/placeHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:background="@drawable/edit_text"/>
		    
		    <EditText 
		        android:id="@+id/description"
		        android:inputType="textMultiLine"
		        android:layout_width="fill_parent"
		        android:layout_height="60dp"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
		        android:hint="@string/descriptionHint"
		        android:textSize="@dimen/edit_text_text_size"
		        android:textColor="@color/edit_text"
		        android:gravity="top"
		        android:background="@drawable/edit_text"/>
		    
		    <menezes.dd.processbutton.FlatButton
			    android:id="@+id/anonymousButton"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
			    android:drawableStart="@drawable/ic_action_flash_off"
			    android:text="@string/anonymous"
			    android:textColor="@color/white_color"
			    android:textSize="14sp"
			    custom:pb_colorNormal="@color/facebook"
			    custom:pb_colorPressed="@color/facebookHover" />
		    
		    <!-- <com.dd.processbutton.FlatButton
			    android:id="@+id/photoButton"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="10dp"
			    android:layout_marginRight="10dp"
			    android:layout_marginBottom="10dp"
			    android:drawableStart="@drawable/ic_action_camera"
			    android:text="@string/addPhotos"
			    android:textColor="@color/white_color"
			    android:textSize="14sp"
			    custom:pb_colorNormal="@color/google"
			    custom:pb_colorPressed="@color/googleHover" />-->
	            
        </LinearLayout>
    </ScrollView>
	    
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/line"/>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="end"
	    android:orientation="vertical">
        
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	        android:gravity="center"
	        android:text="@string/msgAddPhoto" />
	    
		<menezes.dd.processbutton.FlatButton
		    android:id="@+id/addReportButton"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:text="@string/addReport"
		    android:textColor="@color/white_color"
		    android:textSize="14sp"
		    custom:pb_colorNormal="@color/blue"
		    custom:pb_colorPressed="@color/blue_hover" />
		
	</LinearLayout>
    

</LinearLayout>
