<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@drawable/dialog_background">

	<menezes.dd.processbutton.iml.ActionProcessButton
	    android:id="@+id/googleButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:text="@string/googleEnterButton"
	    android:textColor="@android:color/white"
	    android:textSize="14sp"
	    custom:pb_colorComplete="@color/green_complete"
	    custom:pb_colorNormal="@color/google"
	    custom:pb_colorPressed="@color/googleHover"
	    custom:pb_colorProgress="@color/purple_progress"
	    custom:pb_textComplete="Success"
	    custom:pb_textProgress="Loading"
	    custom:pb_textError="Error"
	    custom:pb_colorError="@color/red_error" />
	
	<View 
	    android:id="@+id/line1"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/line"/>
	   
	   <EditText 
	       android:id="@+id/textEmail"
	       android:inputType="textEmailAddress"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	       android:hint="@string/emailHint"
	       android:textSize="@dimen/edit_text_text_size"
	       android:textColor="@color/edit_text"
	       android:background="@drawable/edit_text"/>
	   
	   <EditText 
	       android:id="@+id/textPassword"
	       android:inputType="textPassword"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
	       android:hint="@string/passwordHint"
	       android:textSize="@dimen/edit_text_text_size"
	       android:textColor="@color/edit_text"
	       android:background="@drawable/edit_text"/>
	
	<View 
	    android:id="@+id/line2"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@drawable/line"/>
	
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="end">
	    
		<menezes.dd.processbutton.FlatButton
		    android:id="@+id/enterButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:text="@string/enterButton"
		    android:textColor="@color/white_color"
		    android:textSize="14sp"
		    custom:pb_colorNormal="@color/blue"
		    custom:pb_colorPressed="@color/blue_hover" />
		
	</LinearLayout>
	      
</LinearLayout>
